--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,3 +24,12 @@ h2 {
   text-decoration-style: solid;
   padding-bottom: 12px;
 }
+
+section {
+	display: grid;
+	grid-template-columns: repeat(2, 50%);
+	grid-template-rows: repeat(3, auto);
+	justify-items: center;
+	align-items: center;
+	padding: 6px;
+}
