--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,9 +27,22 @@ h2 {
 
 section {
 	display: grid;
-	grid-template-columns: repeat(2, 50%);
+	grid-template-columns: repeat(1, 100%);
 	grid-template-rows: repeat(3, auto);
 	justify-items: center;
 	align-items: center;
 	padding: 6px;
+}
+
+label {
+	width: 90%;
+	height: 100%;
+	margin: 12px;
+}
+
+textarea {
+	grid-column: 1/ 3;
+	width: 90%;
+	margin-bottom: 12px;
+	padding-bottom: 42px;
 }
