--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,6 +14,13 @@ main {
 	margin: auto;
 }
 
+.sectionDiv {
+  text-align: center;
+}
+
+section {
+  text-align: left;
+}
 h1 {
   text-align: center;
   font-size: 2.3rem;
@@ -53,11 +60,21 @@ form {
 }
 
 label {
-	width: 90%;
+	width: 80%;
 	height: 100%;
-	margin: 12px;
+	margin: 6px;
   text-align: center;
 }
+.tasks {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.tasks p {
+  text-align: left;
+  margin-left: 40px;
+}
+
 
 textarea {
 	grid-column: 1/ 3;
@@ -70,6 +87,7 @@ textarea {
 	margin: 0px 30px;
 	font-size: 1.5rem;
   margin-bottom: 18px;
+  text-align: left;
 }
 
 p {
@@ -82,4 +100,8 @@ p {
 	cursor: pointer;
   background-color: #FFFDFB;
   border: none;
+}
+
+.addbtn {
+  margin-bottom: 12px;
 }
